--- a/.github/workflows/vpc.yml
+++ b/.github/workflows/vpc.yml
@@ -21,6 +21,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Inform starting of action
+      uses: port-labs/port-github-action@v1
+      with:
+          clientId: ${{ secrets.PORT_CLIENT_ID }}
+          clientSecret: ${{ secrets.PORT_CLIENT_SECRET }}
+          operation: PATCH_RUN
+          runId: ${{ fromJson(inputs.port_context).runId }}
+          logMessage: |
+            Starting a GitHub worklfow to tag the AWS resource: ${{fromJson(inputs.port_context).entity.identifier}} ... ⛴️
     - name: Checkout
       uses: actions/checkout@v2
 
