--- a/.github/workflows/vpc.yml
+++ b/.github/workflows/vpc.yml
@@ -34,12 +34,18 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ${{ github.event.inputs.region }}
 
+    - name: Change directory to terraform
+      run: cd VPC-repo/module
+
     - name: Terraform Init
       run: terraform init
+      working-directory: terraform
 
     - name: Terraform Apply
       run: terraform apply -auto-approve
+      working-directory: terraform
       env:
         VPC_NAME: ${{ github.event.inputs.vpc_name }}
         CIDR_BLOCK: ${{ github.event.inputs.cidr_block }}
         AWS_REGION: ${{ github.event.inputs.region }}
+
