--- a/.github/workflows/vpc.yml
+++ b/.github/workflows/vpc.yml
@@ -35,7 +35,7 @@ jobs:
         aws-region: ${{ github.event.inputs.region }}
 
     - name: Change directory to terraform
-      run: cd ../../module
+      run: cd module
 
     - name: Terraform Init
       run: terraform init
