--- a/.github/workflows/vpc.yml
+++ b/.github/workflows/vpc.yml
@@ -39,10 +39,10 @@ jobs:
 
     - name: Terraform Init
       run: |
-        terraform init -backend-config="bucket=test-port-***-tf-state" \
+        terraform init -backend-config="bucket=test-port-788489449561-tf-state" \
                        -backend-config="key=test/us-east-1/terraform.tfstate" \
                        -backend-config="region=us-east-1" \
-                       -backend-config="dynamodb_table=test-port-***-tf-lock" \
+                       -backend-config="dynamodb_table=test-port-788489449561-tf-lock" \
                        -backend-config="encrypt=true" \
                        -force-copy \
                        -backend=true
