--- a/.github/workflows/vpc.yml
+++ b/.github/workflows/vpc.yml
@@ -43,14 +43,14 @@ jobs:
 
     - name: Terraform Plan
       run: |
-        terraform plan -var="vpc_name=${{ github.event.inputs.vpc_name }}" \
+        terraform plan -target="module.vpc" -var="vpc_name=${{ github.event.inputs.vpc_name }}" \
                         -var="vpc_cidr=${{ github.event.inputs.vpc_cidr }}" \
                         -var="region=${{ github.event.inputs.region }}"
       working-directory: module
 
     - name: Terraform Apply
       run: |
-        terraform apply -var="vpc_name=${{ github.event.inputs.vpc_name }}" \
+        terraform apply -target="module.vpc" -var="vpc_name=${{ github.event.inputs.vpc_name }}" \
                         -var="vpc_cidr=${{ github.event.inputs.vpc_cidr }}" \
                         -var="region=${{ github.event.inputs.region }}" \
                         -auto-approve
