--- a/.github/workflows/vpc.yml
+++ b/.github/workflows/vpc.yml
@@ -33,7 +33,7 @@ jobs:
         clientId: ${{ secrets.PORT_CLIENT_ID }}
         clientSecret: ${{ secrets.PORT_CLIENT_SECRET }}
         operation: PATCH_RUN
-        runId: ${{ fromJson(inputs.port_context).rund_id }}
+        runId: ${{ fromJson(inputs.port_context).runId }}
         logMessage: |
           About to create vpc infra creation ${{ github.event.inputs.vpc_name }} .. ⛴️
 
@@ -77,7 +77,7 @@ jobs:
         clientId: ${{ secrets.PORT_CLIENT_ID }}
         clientSecret: ${{ secrets.PORT_CLIENT_SECRET }}
         operation: PATCH_RUN
-        runId: ${{ fromJson(inputs.port_context).rund_id }}
+        runId: ${{ fromJson(inputs.port_context).runId }}
         logMessage: |
             VPC Infra created successfully ✅
 
@@ -88,7 +88,7 @@ jobs:
         clientSecret: ${{ secrets.PORT_CLIENT_SECRET }}
         baseUrl: https://api.getport.io
         operation: PATCH_RUN
-        runId: ${{ fromJson(inputs.port_context).rund_id }}
+        runId: ${{ fromJson(inputs.port_context).runId }}
         logMessage: "Upserting created VPC Infra to Port ... "
 
     - name: UPSERT VPC Entity
@@ -109,7 +109,7 @@ jobs:
         clientSecret: ${{ secrets.PORT_CLIENT_SECRET }}
         baseUrl: https://api.getport.io
         operation: UPSERT
-        runId: ${{ fromJson(inputs.port_context).rund_id }}
+        runId: ${{ fromJson(inputs.port_context).runId }}
 
     - name: Log After Upserting Entity
       uses: port-labs/port-github-action@v1
@@ -118,5 +118,5 @@ jobs:
         clientSecret: ${{ secrets.PORT_CLIENT_SECRET }}
         baseUrl: https://api.getport.io
         operation: PATCH_RUN
-        runId: ${{ fromJson(inputs.port_context).rund_id }}
+        runId: ${{ fromJson(inputs.port_context).runId }}
         logMessage: "Entity upserting was successful ✅"
