--- a/.github/workflows/vpc.yml
+++ b/.github/workflows/vpc.yml
@@ -24,16 +24,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-
     - name: Log starting of VPC Infra creation 
       uses: port-labs/port-github-action@v1
       with:
         clientId: ${{ secrets.PORT_CLIENT_ID }}
         clientSecret: ${{ secrets.PORT_CLIENT_SECRET }}
         operation: PATCH_RUN
-        runId: ${{ fromJson(inputs.port_context).runId }}
+        runId: ${{ fromJson(inputs.port_context).rund_id }}
         logMessage: |
           About to create vpc infra creation ${{ github.event.inputs.vpc_name }} .. ⛴️
 
@@ -77,7 +74,7 @@ jobs:
         clientId: ${{ secrets.PORT_CLIENT_ID }}
         clientSecret: ${{ secrets.PORT_CLIENT_SECRET }}
         operation: PATCH_RUN
-        runId: ${{ fromJson(inputs.port_context).runId }}
+        runId: ${{ fromJson(inputs.port_context).rund_id }}
         logMessage: |
             VPC Infra created successfully ✅
 
@@ -88,7 +85,7 @@ jobs:
         clientSecret: ${{ secrets.PORT_CLIENT_SECRET }}
         baseUrl: https://api.getport.io
         operation: PATCH_RUN
-        runId: ${{ fromJson(inputs.port_context).runId }}
+        runId: ${{ fromJson(inputs.port_context).rund_id }}
         logMessage: "Upserting created VPC Infra to Port ... "
 
     - name: UPSERT VPC Entity
@@ -109,7 +106,7 @@ jobs:
         clientSecret: ${{ secrets.PORT_CLIENT_SECRET }}
         baseUrl: https://api.getport.io
         operation: UPSERT
-        runId: ${{ fromJson(inputs.port_context).runId }}
+        runId: ${{ fromJson(inputs.port_context).rund_id }}
 
     - name: Log After Upserting Entity
       uses: port-labs/port-github-action@v1
@@ -118,5 +115,5 @@ jobs:
         clientSecret: ${{ secrets.PORT_CLIENT_SECRET }}
         baseUrl: https://api.getport.io
         operation: PATCH_RUN
-        runId: ${{ fromJson(inputs.port_context).runId }}
+        runId: ${{ fromJson(inputs.port_context).rund_id }}
         logMessage: "Entity upserting was successful ✅"
