--- a/.github/workflows/vpc.yml
+++ b/.github/workflows/vpc.yml
@@ -30,9 +30,9 @@ jobs:
         clientId: ${{ secrets.PORT_CLIENT_ID }}
         clientSecret: ${{ secrets.PORT_CLIENT_SECRET }}
         operation: PATCH_RUN
-        runId: ${{ fromJson(inputs.port_context).rund_id }}
+        runId: ${{ fromJson(inputs.port_context).runId }}
         logMessage: |
-          About to create vpc infra creation ${{ github.event.inputs.vpc_name }} .. ⛴️
+            About to create vpc infra creation ${{ github.event.inputs.vpc_name }} .. ⛴️
 
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v1
