--- a/.github/workflows/vpc.yml
+++ b/.github/workflows/vpc.yml
@@ -77,6 +77,7 @@ jobs:
     - name: Set Outputs
       id: set_outputs
       run: |
+        cd module
         echo "vpc_id=$(terraform output -raw vpc_id)" >> $GITHUB_ENV
         echo "vpc_cidr"=$(terraform output -raw vpc_cidr)" >> $GITHUB_ENV
         echo "region=$(terraform output -raw region)" >> $GITHUB_ENV
